Correções back & front